--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-dash = "^2.0.0"
+dash = "^2.15.0"
+pandas = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 
